--- a/pages/grid/grid.html
+++ b/pages/grid/grid.html
@@ -1,6 +1,6 @@
 ﻿<div class="WAll PL PR PT">
 
-	<div class="BlockLabel">HMUI提供了一套响应式、移动设备优先十分灵活的网格布局</div>
+	<div class="BlockLabel">KMUI提供了一套响应式、移动设备优先十分灵活的网格布局</div>
 	<style>
 		.GridShow .Row{margin-bottom:10px;}
 		.GridShow [class^=Col]{border:1px solid #ccc;background-color:#fff;line-height:20px;padding:5px;margin-bottom:5px}
