--- a/pages/chart/chart.html
+++ b/pages/chart/chart.html
@@ -1,5 +1,5 @@
 ﻿<div class="WAll PR PL PB">
-	<div class="BlockLabel">这是HMUI集成百度ECharts的图表示例，ECharts的详细用法及 API 请参考其官方网站: <a href="http://echarts.baidu.com">http://echarts.baidu.com</a></div>
+	<div class="BlockLabel">这是KMUI集成百度ECharts的图表示例，ECharts的详细用法及 API 请参考其官方网站: <a href="http://echarts.baidu.com">http://echarts.baidu.com</a></div>
 	<div>
 		<div class="ContentBlockTitle">柱图示例</div>
 		<div id="barChart" style="height:200px"></div>
