--- a/pages/tab/tab.html
+++ b/pages/tab/tab.html
@@ -2,7 +2,7 @@
 	<ul class="Tabs TabsFixed RippleBox">
 		<li ng-class="{active:currentTab === tab}" ng-repeat="tab in tabs" ng-bind="tab.name" ng-click="handC(tab)" class="InkRipple"></li>
 	</ul>	
-	<div class="TabsCon">
+	<div class="TabsCon PAll">
 		<div><div class="BlockLabel">标签1内容</div></div>
 		<div class="DisNo"><div class="BlockLabel">标签2内容</div></div>
 		<div class="DisNo"><div class="BlockLabel">标签3内容</div></div>
