--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -1,6 +1,8 @@
 ﻿<!--PageBody-->
 <div class="WrapContent">
 	<div class="WAll PT">
+	<!--span ng-click="download()">23223232323232</span-->
+
 		<ul class="ListBlock">
 			<li class="ListItem">
 				<a href="http://163.com" id="about" class="ItemLink ItemCon InkRipple">
