--- a/pages/button/button.html
+++ b/pages/button/button.html
@@ -8,6 +8,14 @@
 		<li class="ListItem"><a href="javascript:;" class="Btn BtnSuccess InkRipple">成功按钮</a></li>
 		<li class="ListItem"><span class="Btn BtnWarning InkRipple">警告按钮</span></li>
 		<li class="ListItem"><b class="Btn BtnDanger InkRipple">危险按钮</b></li>
+		<li class="ListItem"><b class="Btn BtnDanger BtnGray InkRipple">灰色按钮</b></li>
+	</ul>
+	<p class="ContentBlockTitle">圆形按钮：</p>
+	
+	<ul class="ListBlock ListBase">
+		<li class="ListItem"><a href="javascript:;" class="Btn InkRipple BtnRound"><img class="BtnIcon" src="images/svg/iconfont-xinxitishi.svg" alt="信息提示" width="16"/></a></li>
+		<li class="ListItem"><a href="javascript:;" class="Btn InkRipple BtnRound BtnBig"><img class="BtnIcon" src="images/svg/iconfont-xinxitishi.svg" alt="信息提示" width="16"/></a></li>
+		<li class="ListItem"><a href="javascript:;" class="Btn InkRipple BtnRound BtnSmall"><img class="BtnIcon" src="images/svg/iconfont-xinxitishi.svg" alt="信息提示" width="16"/></a></li>
 	</ul>
 	<p class="ContentBlockTitle">无底色按钮（使用父元素的背景色）：</p>
 	<ul class="ListBlock ListBase">
