--- a/pages/dialog/dialog.html
+++ b/pages/dialog/dialog.html
@@ -4,10 +4,26 @@
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple PromptBtn">自动消失提示框</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple PickerBtn">底部消息框</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple MenuBtn">底部菜单</button>
+	<button type="button" class="Btn BtnBig BtnBlock InkRipple PopoverBtn">弹出菜单</button>
 
 </div>
 
-
+<div id="SettingModeMenu" class="DisNo">
+		<ul class="Row TC SettingModeMenu">
+			<li class="Col33" ng-click="Load.a()">
+				<div class="Btn BtnRound InkRipple BtnPrimary "><i class="I IMode BtnIcon"></i></div>
+				<div>生活热水</div>
+			</li>
+			<li class="Col33">
+				<div class="Btn BtnRound InkRipple BtnPrimary "><i class="I IMode BtnIcon"></i></div>
+				<div>淋浴</div>
+			</li>
+			<li class="Col33">
+				<div class="Btn BtnRound InkRipple BtnPrimary "><i class="I IMode BtnIcon"></i></div>
+				<div>浴缸</div>
+			</li>
+		</ul>
+	</div>
 
 
 
