--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -5,7 +5,7 @@
 
 		<ul class="ListBlock">
 			<li class="ListItem">
-				<a href="http://163.com" id="about" class="ItemLink ItemCon InkRipple">
+				<a href="javascript:;" id="about" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">about KMUI(关于KMUI)</span></div>
 						<div class="ItemAfter"></div>
@@ -99,6 +99,22 @@
 				<a href="#/dialog" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">dialog(消息框)</span></div>
+						<div class="ItemAfter"></div>
+					</div>
+				</a>
+			</li>
+			<li class="ListItem">
+				<a href="#/picker" class="ItemLink ItemCon InkRipple">
+					<div class="ItemInner">
+						<div class="ItemTitle"><span class="H5">picker(选择器)</span></div>
+						<div class="ItemAfter"></div>
+					</div>
+				</a>
+			</li>
+			<li class="ListItem">
+				<a href="#/pull" class="ItemLink ItemCon InkRipple">
+					<div class="ItemInner">
+						<div class="ItemTitle"><span class="H5">pull to refresh(下拉刷新)</span></div>
 						<div class="ItemAfter"></div>
 					</div>
 				</a>
