--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="zh-CN" class="Mobile">
 <head>
 <meta charset="UTF-8">
@@ -14,7 +15,9 @@
 <link rel="stylesheet" href="style/kelat.css" media="all"/>
 <!-- 扩展样式 -->
 <link rel="stylesheet" href="style/theme.css" media="all"/>
-
+<!--[if lt IE 10]>
+<link rel="stylesheet" type="text/css" href="style/IE.css" />
+<![endif]--> 
 </head>
 <body>
     <!-- 状态栏覆盖全屏幕模式 (PhoneGap) -->
