--- a/pages/tab/tab.html
+++ b/pages/tab/tab.html
@@ -3,11 +3,11 @@
 		<li ng-class="{active:currentTab === tab}" ng-repeat="tab in tabs" ng-bind="tab.name" ng-click="handC(tab)" class="InkRipple"></li>
 	</ul>	
 	<div class="TabsCon PAll">
-		<div><div class="BlockLabel">标签1内容</div></div>
-		<div class="DisNo"><div class="BlockLabel">标签2内容</div></div>
-		<div class="DisNo"><div class="BlockLabel">标签3内容</div></div>
-		<div class="DisNo"><div class="BlockLabel">标签4内容</div></div>
-		<div class="DisNo"><div class="BlockLabel">标签5内容</div></div>
+		<div class="TabsConItme"><div class="BlockLabel">标签1内容</div></div>
+		<div class="TabsConItme DisNo"><div class="BlockLabel">标签2内容</div></div>
+		<div class="TabsConItme DisNo"><div class="BlockLabel">标签3内容</div></div>
+		<div class="TabsConItme DisNo"><div class="BlockLabel">标签4内容</div></div>
+		<div class="TabsConItme DisNo"><div class="BlockLabel">标签5内容</div></div>
 	</div>
 	<div class="BlockLabel">简单的选项卡，内容和标签相对应</div>
 </div>
