--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -112,6 +112,14 @@
 				</a>
 			</li>
 			<li class="ListItem">
+				<a href="#/infiniteScroll" class="ItemLink ItemCon InkRipple">
+					<div class="ItemInner">
+						<div class="ItemTitle"><span class="H5">infinite scroll(无限滚动)</span></div>
+						<div class="ItemAfter"></div>
+					</div>
+				</a>
+			</li>
+			<li class="ListItem">
 				<a href="#/pull" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">pull to refresh(下拉刷新)</span></div>
