--- a/pages/pull/pull.html
+++ b/pages/pull/pull.html
@@ -1,10 +1,14 @@
-﻿<div class="WAll PB">
+﻿<div class="WAll PB ">
 
 
 
-
-	<div class="PullToRefresh pull-to-refresh-content">
-		<ul class="ListBlock MediaList">
+	
+	<div class="PullToRefresh PullToRefreshContent" id="isBackToTop" data-distance="50">
+		<div class="PullToRefreshLayer">
+			<div class="Loading"></div>
+			<div class="PullToRefreshArrow"></div>
+		</div>
+		<ul class="ListBlock MediaList PullToRefreshList">
 			<li class="ListItem">
 				<div href="javascript:;" class="ItemCon InkRipple">
 					<div class="ItemMedia"><img src="images/01.jpg" width="44"/></div>
