--- a/pages/Infinite/Infinite.html
+++ b/pages/Infinite/Infinite.html
@@ -3,12 +3,12 @@
 
 
 	
-	<div class="PullToRefresh PullToRefreshContent infinite-scroll" data-distance='50'>
+	<div class="PullToRefresh PullToRefreshContent InfiniteScroll" data-distance='50'>
 		<div class="PullToRefreshLayer">
 			<div class="Loading"></div>
 			<div class="PullToRefreshArrow"></div>
 		</div>
-		<ul class="ListBlock MediaList PullToRefreshList virtual-list">
+		<ul class="ListBlock MediaList PullToRefreshList">
 			<li class="ListItem">
 				<div href="javascript:;" class="ItemCon InkRipple">
 					<div class="ItemMedia"><img src="images/01.jpg" width="44"/></div>
