--- a/pages/dialog/dialog.html
+++ b/pages/dialog/dialog.html
@@ -5,25 +5,48 @@
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple PickerBtn">底部消息框</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple MenuBtn">底部菜单</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple PopoverBtn">弹出菜单</button>
+	<button type="button" class="Btn BtnBig BtnBlock InkRipple PopupBtn">弹出菜单</button>
 
 </div>
 
-<div id="SettingModeMenu" class="DisNo">
-		<ul class="Row TC SettingModeMenu">
-			<li class="Col33" ng-click="Load.a()">
-				<div class="Btn BtnRound InkRipple BtnPrimary "><i class="I IMode BtnIcon"></i></div>
-				<div>生活热水</div>
-			</li>
-			<li class="Col33">
-				<div class="Btn BtnRound InkRipple BtnPrimary "><i class="I IMode BtnIcon"></i></div>
-				<div>淋浴</div>
-			</li>
-			<li class="Col33">
-				<div class="Btn BtnRound InkRipple BtnPrimary "><i class="I IMode BtnIcon"></i></div>
-				<div>浴缸</div>
-			</li>
-		</ul>
-	</div>
+
+<div class="ModalPopover popover-menu SettingModeMenu" >
+      <div class="ModalPopoverAngle onTop"></div>
+      <div class="ModalPopoverInner">
+        <div class="ListBlock">
+          <ul>
+            <li class="ListItem"><a href="modals.html" class="ListButton ItemLink ItemCon">Modals</a></li>
+            <li class="ListItem"><a href="popover.html" class="ListButton ItemLink ItemCon">Popover</a></li>
+            <li class="ListItem"><a href="tabs.html" class="ListButton ItemLink ItemCon">Tabs</a></li>
+            <li class="ListItem"><a href="panels.html" class="ListButton ItemLink ItemCon">Side Panels</a></li>
+            <li class="ListItem"><a href="list-view.html" class="ListButton ItemLink ItemCon">List View</a></li>
+            <li class="ListItem"><a href="forms.html" class="ListButton ItemLink ItemCon">Forms</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="PopupBox navbar-on-left NavBarFixed demo-popup">
+            <div class="NavBar ">
+              <div class="NavBarInner">
+                <div class="Center sliding">Popup Title</div>
+                <div class="Right"><a href="javascript:;" class="Link ClosePopup">Done</a></div>
+              </div>
+            </div>
+            <div class="PageContent">
+              <div class="ContentBlock">
+                <p>Here comes popup. You can put here anything, even independent view with its own navigation. Also not, that by default popup looks a bit different on iPhone/iPod and iPad, on iPhone it is fullscreen.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse faucibus mauris leo, eu bibendum neque congue non. Ut leo mauris, eleifend eu commodo a, egestas ac urna. Maecenas in lacus faucibus, viverra ipsum pulvinar, molestie arcu. Etiam lacinia venenatis dignissim. Suspendisse non nisl semper tellus malesuada suscipit eu et eros. Nulla eu enim quis quam elementum vulputate. Mauris ornare consequat nunc viverra pellentesque. Aenean semper eu massa sit amet aliquam. Integer et neque sed libero mollis elementum at vitae ligula. Vestibulum pharetra sed libero sed porttitor. Suspendisse a faucibus lectus.</p>
+                <p>Duis ut mauris sollicitudin, venenatis nisi sed, luctus ligula. Phasellus blandit nisl ut lorem semper pharetra. Nullam tortor nibh, suscipit in consequat vel, feugiat sed quam. Nam risus libero, auctor vel tristique ac, malesuada ut ante. Sed molestie, est in eleifend sagittis, leo tortor ullamcorper erat, at vulputate eros sapien nec libero. Mauris dapibus laoreet nibh quis bibendum. Fusce dolor sem, suscipit in iaculis id, pharetra at urna. Pellentesque tempor congue massa quis faucibus. Vestibulum nunc eros, convallis blandit dui sit amet, gravida adipiscing libero.</p>
+                <p>Morbi posuere ipsum nisl, accumsan tincidunt nibh lobortis sit amet. Proin felis lorem, dictum vel nulla quis, lobortis dignissim nunc. Pellentesque dapibus urna ut imperdiet mattis. Proin purus diam, accumsan ut mollis ac, vulputate nec metus. Etiam at risus neque. Fusce tincidunt, risus in faucibus lobortis, diam mi blandit nunc, quis molestie dolor tellus ac enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum turpis a velit vestibulum pharetra. Vivamus blandit dapibus cursus. Aenean lorem augue, vehicula in eleifend ut, imperdiet quis felis.</p>
+                <p>Duis non erat vel lacus consectetur ultricies. Sed non velit dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin vel varius mi, a tristique ante. Vivamus eget nibh ac elit tempor bibendum sit amet vitae velit. Proin sit amet dapibus nunc, non porta tellus. Fusce interdum vulputate imperdiet. Sed faucibus metus at pharetra fringilla. Fusce mattis orci et massa congue, eget dapibus ante rhoncus. Morbi semper sed tellus vel dignissim. Cras vestibulum, sapien in suscipit tincidunt, lectus mi sodales purus, at egestas ligula dui vel erat. Etiam cursus neque eu lectus eleifend accumsan vitae non leo. Aliquam scelerisque nisl sed lacus suscipit, ac consectetur sapien volutpat. Etiam nulla diam, accumsan ut enim vel, hendrerit venenatis sem. Vestibulum convallis justo vitae pharetra consequat. Mauris sollicitudin ac quam non congue.</p>
+              </div>
+            </div>
+    </div>
+
+
+
+
 
 
 
