--- a/pages/header/header.html
+++ b/pages/header/header.html
@@ -1,12 +1,12 @@
-﻿<!--div class="WAll">
+﻿<!--<div class="WAll">
 	<div class="HeaNav RippleBox">
 		<span class="HeaNavL InkRipple" onclick="javascript:history.back(-1);">
 			<i class="Icon IconBack"></i>
 		</span>
 		<span class="HeaNavC">{{HeaderTitle}}</span>
-		<span class="HeaNavR InkRipple"><!--i class="Icon IconUser"></i-- -></span>
+		<span class="HeaNavR InkRipple"><i class="Icon IconUser"></i></span>
 	</div>
-</div-->
+</div>-->
 <div class="WAll">
 	<div class="NavBar RippleBox">
 		<div class="NavBarInner">
