修正性能问题

--- a/pages/Infinite/Infinite.html
+++ b/pages/Infinite/Infinite.html
@@ -3,11 +3,7 @@
 
 
 	
-	<div class="PullToRefresh PullToRefreshContent InfiniteScroll" data-distance='50'>
-		<div class="PullToRefreshLayer">
-			<div class="Loading"></div>
-			<div class="PullToRefreshArrow"></div>
-		</div>
+	<div class="InfiniteScroll" data-distance='50'>
 		<ul class="ListBlock MediaList PullToRefreshList">
 			<li class="ListItem">
 				<div href="javascript:;" class="ItemCon InkRipple">
