--- a/pages/floatbutton/floatbutton.html
+++ b/pages/floatbutton/floatbutton.html
@@ -1,6 +1,6 @@
 ﻿<div class="WAll PR PL PB">
 	<div class="SpeedDial">
-		<a href="javascript:;" class="FloatingButton">
+		<a href="javascript:;" class="FloatingButton FloaButton">
 			<i class="Icon IconPlus"></i>
 			<i class="Icon IconClose"></i>
 		</a>
