--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -1,5 +1,5 @@
 ﻿<!--PageBody-->
-<div class="WrapContent">
+<div class="WrapContent" id="isBackToTop">
 	<div class="WAll PT">
 	<!--span ng-click="download()">23223232323232</span-->
 
@@ -147,6 +147,14 @@
 				<a href="#/mediaLists" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">mediaLists(媒体列表)</span></div>
+						<div class="ItemAfter"></div>
+					</div>
+				</a>
+			</li>
+			<li class="ListItem">
+				<a href="#/imageLazyLoad" class="ItemLink ItemCon InkRipple">
+					<div class="ItemInner">
+						<div class="ItemTitle"><span class="H5">imageLazyLoading(图片延迟加载)</span></div>
 						<div class="ItemAfter"></div>
 					</div>
 				</a>
