--- a/pages/picker/picker.html
+++ b/pages/picker/picker.html
@@ -78,13 +78,13 @@
 				</ul>
 			</div>
 		</div>
-		<div id="ks-picker-date-container"></div>
+		<div id="ks-picker-da te-container"></div>
 	</div>
 <div class="PickerModal PickerModalDemo">
       <div class="ToolBar">
         <div class="ToolBarInner">
           <div class="Left"></div>
-          <div class="Right"><a href="javascript:;" class="Link  ClosePicker">完成</a></div>
+          <div class="Right"><a href="javascript:;" class="Link OkPicker">完成</a></div>
         </div>
       </div>
       <div class="PickerModalInner">
