增加功能，修改BUG

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -128,6 +128,14 @@
 				</a>
 			</li>
 			<li class="ListItem">
+				<a href="#/swipeoutActions" class="ItemLink ItemCon InkRipple">
+					<div class="ItemInner">
+						<div class="ItemTitle"><span class="H5">Swipeout Actions(滑动操作)</span></div>
+						<div class="ItemAfter"></div>
+					</div>
+				</a>
+			</li>
+			<li class="ListItem">
 				<a href="#/notify" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">notify(通知)</span></div>
@@ -162,7 +170,7 @@
 			<li class="ListItem">
 				<a href="#/text" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
-						<div class="ItemTitle"><span class="H5">text(文本)</span></div>
+						<div class="ItemTitle"><span class="H5">background & text(背景和文本)</span></div>
 						<div class="ItemAfter"></div>
 					</div>
 				</a>
