--- a/pages/text/text.html
+++ b/pages/text/text.html
@@ -1,4 +1,22 @@
-﻿<div class="WAll PL PR PT">
+﻿<div class="WAll PL PR PT GridShow">
+	<div class="ContentBlockTitle">背景颜色</div>
+	<style>
+		.GridShow .Row{margin-bottom:10px;}
+		.GridShow [class^=Col]{line-height:20px;padding:5px;margin-bottom:5px}
+	</style>
+	<div class="Row TC">
+		<div class="Col25 BW">白色</div>
+		<div class="Col25 BBlue">蓝色</div>
+		<div class="Col25 BPurple">紫色</div>
+		<div class="Col25 BRed">红色</div>
+	</div>
+	<div class="Row TC">
+		<div class="Col25 BPink">粉色</div>
+		<div class="Col25 BTeal">青色</div>
+		<div class="Col25 BGreen">绿色</div>
+		<div class="Col25 BOrange">橘色</div>
+	</div>
+	
 	<div class="ContentBlockTitle">文本颜色</div>
 	<div>
 		<span class="CA"><code>.CA</code> 灰色 </span>
