增加排序列表

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -128,6 +128,14 @@
 				</a>
 			</li>
 			<li class="ListItem">
+				<a href="#/sortable" class="ItemLink ItemCon InkRipple">
+					<div class="ItemInner">
+						<div class="ItemTitle"><span class="H5">Sortable List(可排序列表)</span></div>
+						<div class="ItemAfter"></div>
+					</div>
+				</a>
+			</li>
+			<li class="ListItem">
 				<a href="#/swipeoutActions" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">Swipeout Actions(滑动操作)</span></div>
