增加折叠面板

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -32,6 +32,14 @@
 				</a>
 			</li>
 			<li class="ListItem">
+				<a href="#/accordion" class="ItemLink ItemCon InkRipple">
+					<div class="ItemInner">
+						<div class="ItemTitle"><span class="H5">Accordion(折叠面板)</span></div>
+						<div class="ItemAfter"></div>
+					</div>
+				</a>
+			</li>
+			<li class="ListItem">
 				<a href="#/floatbutton" class="ItemLink ItemCon InkRipple">
 					<div class="ItemInner">
 						<div class="ItemTitle"><span class="H5">floatbutton(浮动按钮)</span></div>
