--- a/pages/footer/footer.html
+++ b/pages/footer/footer.html
@@ -1,6 +1,11 @@
 ﻿<footer class="WrapFooter">
-	<div class="BotNav">
-		<div class="WAll">
+	<div class="WAll">
+		<div class="ToolBar">
+			<div class="BarInner">
+				<span class="Left"></span>
+				<span class="Center"></span>
+				<span class="Right"></span>
+			</div>
 		</div>
 	</div>
 </footer>
