--- a/pages/imageLazyLoad/imageLazyLoad.html
+++ b/pages/imageLazyLoad/imageLazyLoad.html
@@ -8,28 +8,28 @@
   </div>
   <div class="ContentBlock" id="LazyLoad">
         <div class="ContentBlockInner">
-          <p> <img data-src="images/02.jpg" width="100%" height="auto" class="Lazy LazyFadeIn ks-demo-Lazy"/></p>
+          <p> <img data-src="images/02.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
-          <p> <img data-src="images/01.jpg" width="100%" height="auto" class="Lazy LazyFadeIn ks-demo-Lazy"/></p>
+          <p> <img data-src="images/01.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
-          <p> <img data-src="images/03.jpg" width="100%" height="auto" class="Lazy LazyFadeIn ks-demo-Lazy"/></p>
+          <p> <img data-src="images/03.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
-          <p> <img data-src="images/01.jpg" width="100%" height="auto" class="Lazy LazyFadeIn ks-demo-Lazy"/></p>
+          <p> <img data-src="images/01.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
-          <p> <img data-src="images/02.jpg" width="100%" height="auto" class="Lazy LazyFadeIn ks-demo-Lazy"/></p>
+          <p> <img data-src="images/02.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
-          <p> <img data-src="images/03.jpg" width="100%" height="auto" class="Lazy LazyFadeIn ks-demo-Lazy"/></p>
+          <p> <img data-src="images/03.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
-          <p> <img data-src="images/02.jpg" width="100%" height="auto" class="Lazy LazyFadeIn ks-demo-Lazy"/></p>
+          <p> <img data-src="images/02.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
-          <p> <img data-src="images/01.jpg" width="100%" height="auto" class="Lazy LazyFadeIn ks-demo-Lazy"/></p>
+          <p> <img data-src="images/01.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
-          <p> <img data-src="images/03.jpg" width="100%" height="auto" class="Lazy LazyFadeIn ks-demo-Lazy"/></p>
+          <p> <img data-src="images/03.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
-          <p> <img data-src="images/01.jpg" width="100%" height="auto" class="Lazy LazyFadeIn ks-demo-Lazy"/></p>
+          <p> <img data-src="images/01.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
           <p><b>使用背景图像:</b></p>
-          <div data-background="images/02.jpg" class="Lazy LazyFadeIn ks-demo-Lazy"></div>
+          <div data-background="images/02.jpg" style="height:120px;" class="Lazy LazyFadeIn "></div>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
         </div>
       </div>
