--- a/pages/tab/tab.html
+++ b/pages/tab/tab.html
@@ -1,15 +1,16 @@
 ﻿<div class="WAll">
-	<ul class="Tabs TabsFixed RippleBox">
-		<li ng-class="{active:currentTab === tab}" ng-repeat="tab in tabs" ng-bind="tab.name" ng-click="handC(tab)" class="InkRipple"></li>
-	</ul>	
-	<div class="TabsCon PAll">
-		<div class="TabsConItme"><div class="BlockLabel">标签1内容</div></div>
-		<div class="TabsConItme DisNo"><div class="BlockLabel">标签2内容</div></div>
-		<div class="TabsConItme DisNo"><div class="BlockLabel">标签3内容</div></div>
-		<div class="TabsConItme DisNo"><div class="BlockLabel">标签4内容</div></div>
-		<div class="TabsConItme DisNo"><div class="BlockLabel">标签5内容</div></div>
+	<div class="ToolBar TabBar">
+		<ul class="ToolBarInner">
+			<li data-tab="#tab1" class="TabLink active">选项卡 1</li>
+			<li data-tab="#tab2" class="TabLink">选项卡 2</li>
+			<li data-tab="#tab3" class="TabLink">选项卡 3</li>
+		</ul>
+	</div>	
+	<div class="Tabs">
+		<div id="tab1" class="Tab PAll active"><div class="BlockLabel">标签1内容</div></div>
+		<div id="tab2" class="Tab PAll"><div class="BlockLabel">标签2内容</div></div>
+		<div id="tab3" class="Tab PAll"><div class="BlockLabel">标签3内容</div></div>
 	</div>
-	<div class="BlockLabel">简单的选项卡，内容和标签相对应</div>
 </div>
 
 
