增加帮助文档，修改库

--- a/help/pages/text.html
+++ b/help/pages/text.html
@@ -48,6 +48,22 @@ text-align:center;}
 			<div class="H5">h5. 标题 14px<small>副标题</small></div>
 			<div class="H6">h6. 标题 12px<small>副标题</small></div>
 		</div>
+        <h4>文本颜色:</h4>
+		<p>提供多种文本颜色选择</p>
+        <div>
+			<div class="H4 CA">文本颜色 .CA</div>
+			<div class="H4 CB">文本颜色 .CB</div>
+			<div class="H4 CO">文本颜色 .CO</div>
+			<div class="H4 CG">文本颜色 .CG</div>
+			<div class="H4 CR">文本颜色 .CR</div>
+			<div class="H4 CC">文本颜色 .CC</div>
+		</div>
+        <h4>文本对齐:</h4>
+        <div>
+			<div class="H4 TL">文本左对齐 .TL</div>
+			<div class="H4 TR">文本右对齐 .TR</div>
+			<div class="H4 TC">文本居中对齐 .TC</div>
+		</div>
 		
    </div>
 
