--- a/pages/accordion/accordion.html
+++ b/pages/accordion/accordion.html
@@ -2,8 +2,9 @@
 	<div class="ContentBlockTitle">列表视图折叠面板</div>
     <div class="ListBlock AccordionList">
       <ul>
-        <li class="AccordionItem ListItem"><a href="javascript:;" class="ItemLink ItemCon">
-            <div class="ItemInner"> 
+        <li class="AccordionItem ListItem AccordionItemExpanded">
+		<a href="javascript:;" class="ItemLink ItemCon">
+            <div class="ItemInner "> 
               <div class="ItemTitle">Lorem Ipsum</div>
             </div></a>
           <div class="AccordionItemCon">
@@ -12,8 +13,8 @@
             </div>
           </div>
         </li>
-        <li class="AccordionItem ListItem"><a href="javascript:;" class="ItemLink ItemCon">
-            <div class="ItemInner"> 
+        <li class="AccordionItem ListItem ggg"><a href="javascript:;" class="ItemLink ItemCon">
+            <div class="ItemInner "> 
               <div class="ItemTitle">Nested List</div>
             </div></a>
 			  <div class="AccordionItemCon">
