--- a/pages/box/box.html
+++ b/pages/box/box.html
@@ -19,7 +19,7 @@
 		<div class="BoxContent">
 			<div class="BoxContentInner">带有标题和尾的卡片。卡片头是用来显示卡的标题和脚注的一些附加信息或自定义操作。</div>
 		</div>
-		<div class="BoxFooter">
+		<div class="BoxFooter" valign="top">
 			<a href="javascript:;" class="Link">喜欢</a>
 			<a href="javascript:;" class="Link">查看更多</a>
 		</div>
@@ -106,6 +106,35 @@
 			</ul>
 		</div>
 	</div>
+	
+	<ul class="ListBlock BoxList">
+		<li class="ListItem Box">
+			<div class="BoxHeader">
+				页眉
+			</div>
+			<div class="BoxContent">
+				<div class="BoxContentInner">
+					内容
+				</div>
+			</div>
+			<div class="BoxFooter">
+				页脚
+			</div>
+		</li>
+		<li class="ListItem Box">
+			<div class="BoxHeader">
+				页眉
+			</div>
+			<div class="BoxContent">
+				<div class="BoxContentInner">
+					内容
+				</div>
+			</div>
+			<div class="BoxFooter">
+				页脚
+			</div>
+		</li>
+	</ul>
 	
 	<div class="Box">
 		<div class="BoxHeader">新版本</div>
