--- a/pages/dialog/dialog.html
+++ b/pages/dialog/dialog.html
@@ -5,13 +5,12 @@
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple PickerBtn">底部消息框</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple MenuBtn">底部菜单</button>
 	<button type="button" class="Btn BtnBig BtnBlock InkRipple PopoverBtn">弹出菜单</button>
-	<button type="button" class="Btn BtnBig BtnBlock InkRipple PopupBtn">弹出菜单</button>
+	<button type="button" class="Btn BtnBig BtnBlock InkRipple PopupBtn">弹出层</button>
 
 </div>
 
 
-<div class="ModalPopover popover-menu SettingModeMenu" >
-      <div class="ModalPopoverAngle onTop"></div>
+<div class="ModalPopover SettingModeMenu">
       <div class="ModalPopoverInner">
         <div class="ListBlock">
           <ul>
@@ -26,7 +25,7 @@
       </div>
     </div>
 
-    <div class="PopupBox navbar-on-left NavBarFixed demo-popup">
+    <div class="PopupBox NavBarFixed demo-popup">
             <div class="NavBar ">
               <div class="NavBarInner">
                 <div class="Center sliding">Popup Title</div>
