--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -1,8 +1,7 @@
 ﻿<!--PageBody-->
-<div class="WrapContent" id="isBackToTop">
+<div class="WrapContent isBackToTop">
 	<div class="WAll PT">
 	<!--span ng-click="download()">23223232323232</span-->
-	<span id="test">23223232323232</span>
 
 		<ul class="ListBlock">
 			<li class="ListItem">
