--- a/pages/imageLazyLoad/imageLazyLoad.html
+++ b/pages/imageLazyLoad/imageLazyLoad.html
@@ -6,7 +6,7 @@
 	  <p>它会使页面加载速度更快，提高滚动性能和节省流量。</p>
 	</div>
   </div>
-  <div class="ContentBlock" id="LazyLoad">
+  <div class="ContentBlock">
         <div class="ContentBlockInner">
           <p> <img data-src="images/02.jpg" width="100%" height="auto" class="Lazy LazyFadeIn "/></p>
           <p>图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述图片文本描述。</p>
