--- a/pages/sortable/sortable.html
+++ b/pages/sortable/sortable.html
@@ -1,8 +1,9 @@
 ﻿<div class="WAll">
 	<div class="BlockLabel  PL PR">可以设置单个“编辑”按钮，启动排序。 <a href="javascript:;" class="ToggleSortable">编辑</a></div>
 	<div class="BlockLabel  PL PR">也也可使用分开的按钮启动排序。<br/>
-		<a href="javascript:;" class="OpenSortable">打开排序</a> 
-		<a href="javascript:;" class="CloseSortable">取消排序</a>
+		<a href="javascript:;" data-sortable=".Sortable" class="OpenSortable">打开排序</a> 
+		<a href="javascript:;" data-sortable=".Sortable" class="CloseSortable">取消排序</a>
+		<a href="javascript:;" data-sortable=".Sortable" class="ToggleSortable">切换排序</a>
 	</div>
 	<ul class="ListBlock Sortable">
 		<li class="ListItem">
