--- a/help/indexui.html
+++ b/help/indexui.html
@@ -20,6 +20,7 @@
 		  <h3>布局</h3>
           <ul>
             <li><a href="pages/grid.html">grid(网格布局)</a></li>
+			<li><a href="pages/stylebox.html">stylebox(九宫格)</a></li>
           </ul>
         </li>
         <li>
@@ -33,6 +34,7 @@
           <ul>
             <li><a href="pages/list.html">list(列表)</a></li>
             <li><a href="pages/mediaLists.html">mediaLists(媒体列表)</a></li>
+            <li><a href="pages/timeline.html">timeline(时间轴)</a></li>
           </ul>
         </li>
         <li>
@@ -50,7 +52,18 @@
           <ul>
             <li><a href="pages/background.html">background(背景颜色)</a></li>
             <li><a href="pages/text.html">text(文本)</a></li>
-            <li><a href="pages/short.html">short(短标)</a></li>
+          </ul>
+        </li>
+        <li>
+		  <h3>图标</h3>
+          <ul>
+            <li><a href="pages/icon.html">图标库</a></li>
+          </ul>
+        </li>
+        <li>
+		  <h3>盒</h3>
+          <ul>
+            <li><a href="pages/box.html">box(盒)</a></li>
           </ul>
         </li>
       </ul>
@@ -61,34 +74,30 @@
       <h2>UI组件</h2>
       <ul>
         <li>
-          <h3>基本</h3>
+          <h3>弹出框</h3>
           <ul>
-            <li><a href="pages/id.html">#id</a></li>
-            <li><a href="pages/element.html">element</a></li>
-            <li><a href="pages/class.html">.class</a></li>
-            <li><a href="pages/all.html">*</a></li>
-            <li><a href="pages/multiple.html">selector1,selector2,selectorN</a></li>
+            <li><a href="pages/alert.html">$$.alert(text,[title, callbackOk],[buttonText])</a></li>
+            <li><a href="pages/confirm.html">$$.confirm(text,[title, callbackOk, callbackCancel],[buttonText])</a></li>
+            <li><a href="pages/prompt.html">$$.prompt(text,time)</a></li>
+            <li><a href="pages/popup.html">$$.popup(obj|html)</a></li>
+            <li><a href="pages/popover.html">$$.popover(obj|html,target)</a></li>
+            <li><a href="pages/confirmModal.html">$$.confirmModal(text,[title, callbackOk, callbackCancel],[buttonText])</a></li>
           </ul>
         </li>
         <li>
-          <h3>层级</h3>
+          <h3>操作表单</h3>
           <ul>
-            <li><a href="pages/descendant.html">ancestor descendant</a></li>
-            <li><a href="pages/child.html">parent &gt;  child</a></li>
-            <li><a href="pages/next_1.html">prev + next</a></li>
-            <li><a href="pages/siblings_1.html">prev ~ siblings</a></li>
+            <li><a href="pages/actions.html">$$.actions(options)</a></li>
           </ul>
         </li>
         <li>
-          <h3>属性</h3>
+          <h3>列表操作</h3>
           <ul>
-            <li><a href="pages/attributeHas.html">[attribute]</a></li>
-            <li><a href="pages/attributeEquals.html">[attribute=value]</a></li>
-            <li><a href="pages/attributeNotEqual.html">[attribute!=value]</a></li>
-            <li><a href="pages/attributeStartsWith.html">[attribute^=value]</a></li>
-            <li><a href="pages/attributeEndsWith.html">[attribute$=value]</a></li>
-            <li><a href="pages/attributeContains.html">[attribute*=value]</a></li>
-            <li><a href="pages/attributeMultiple.html">[attrSel1][attrSel2][attrSelN]</a></li>
+            <li><a href="pages/accordion.html">Accordion(折叠面板)</a></li>
+            <li><a href="pages/infiniteScroll.html">infinite scroll(无限滚动)</a></li>
+            <li><a href="pages/pullRefresh.html">pull to refresh(下拉刷新)</a></li>
+            <li><a href="pages/sortable.html">Sortable List(可排序列表)</a></li>
+            <li><a href="pages/swipeout.html">Swipeout Actions(滑动操作)</a></li>
           </ul>
         </li>
       </ul>
@@ -96,91 +105,56 @@
   </div>
   <div class="col-3">
     <div id="traversing">
-      <h2>筛选</h2>
+      <h2>UI组件</h2>
       <ul>
         <li>
-          <h3>过滤</h3>
+          <h3>picker(选择器)</h3>
           <ul>
-            <li><a href="pages/eq.html">eq(index|-index)</a></li>
-            <li><a href="pages/filter.html">filter(fn)</a></li>
-            <li><a href="pages/is.html">is(selector)</a></li>
+            <li><a href="pages/picker.html">picker(选择器)</a></li>
           </ul>
         </li>
         <li>
-          <h3>查找</h3>
+          <h3>tab(选项卡)</h3>
           <ul>
-            <li><a href="pages/children.html">children([expr])</a></li>
-            <li><a href="pages/closest.html">closest(selector)</a></li>
-            <li><a href="pages/find.html">find(e|o|e)</a></li>
-            <li><a href="pages/next.html">next([expr])</a></li>
-            <li><a href="pages/nextAll.html">nextall([expr])</a></li>
-            <li><a href="pages/parent.html">parent([expr])</a></li>
-            <li><a href="pages/parents.html">parents([expr])</a></li>
-            <li><a href="pages/prev.html">prev([expr])</a></li>
-            <li><a href="pages/prevAll.html">prevall([expr])</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <div id="ajax" >
-      <h2>ajax</h2>
-      <ul>
-        <li>
-          <h3>ajax 请求</h3>
-          <ul>
-            <li><a href="pages/kelat.ajax.html">$$.ajax(url,[settings])</a></li>
-            <li><a href="pages/kelat.get.html">$$.get(url,[data],[fn],[type])</a></li>
-            <li><a href="pages/kelat.getJSON.html">$$.getJSON(url,[data],[fn])</a></li>
-            <li><a href="pages/kelat.post.html">$$.post(url,[data],[fn],[type])</a></li>
+            <li><a href="pages/tab.html">tab(选项卡)</a></li>
           </ul>
         </li>
         <li>
-          <h3>ajax 事件</h3>
+          <h3>notify(通知)</h3>
           <ul>
-            <li><a href="pages/ajaxComplete.html">ajaxComplete(callback)</a></li>
-            <li><a href="pages/ajaxError.html">ajaxError(callback)</a></li>
-            <li><a href="pages/ajaxStart.html">ajaxStart(callback)</a></li>
-            <li><a href="pages/ajaxSuccess.html">ajaxSuccess(callback)</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <div id="utilities" >
-      <h2>工具</h2>
-      <ul>
-        <li>
-          <h3>设备/操作系统及特性探测</h3>
-          <ul>
-            <li><a href="pages/kelatdevice.html">$$.fn.device</a></li>
+            <li><a href="pages/notify.html">notify(通知)</a></li>
           </ul>
         </li>
         <li>
-          <h3>函数操作</h3>
+          <h3>loading(加载)</h3>
           <ul>
-            <li><a href="pages/kelatnoop.html">$$.noop</a></li>
-          </ul>
-		  </li>
-        <li>
-          <h3>测试操作</h3>
-          <ul>
-            <li><a href="pages/kelattype.html">$$.type(obj)</a></li>
-            <li><a href="pages/kelatisArray.html">$$.isArray(obj)</a></li>
-            <li><a href="pages/kelatisNumber.html">$$.isNumber(value)</a></li>
-            <li><a href="pages/kelatisFunction.html">$$.isFunction(obj)</a></li>
-            <li><a href="pages/kelatisPlainObject.html">$$.isPlainObject(obj)</a></li>
-            <li><a href="pages/kelatisWindow.html">$$.isWindow(obj)</a></li>
+            <li><a href="pages/loading.html">loading(加载)</a></li>
           </ul>
         </li>
         <li>
-          <h3>字符串操作</h3>
+          <h3>图片处理</h3>
           <ul>
-            <li><a href="pages/kelattrim.html">$$.trim(str)</a></li>
+            <li><a href="pages/imageLazyLoading.html">imageLazyLoading(图片延迟加载)</a></li>
+            <li><a href="pages/imgReady.html">imgReady(图片加载就绪事件)</a></li>
+            <li><a href="pages/imgRender.html">imgRender(图片渲染)</a></li>
           </ul>
         </li>
         <li>
-          <h3>URL</h3>
+          <h3>返回顶部</h3>
           <ul>
-            <li><a href="pages/kelatparam.html">$$.getUrlParams([url,type])</a></li>
+            <li><a href="pages/backToTop.html">backToTop(返回顶部)</a></li>
+          </ul>
+        </li>
+        <li>
+          <h3>数字输入框</h3>
+          <ul>
+            <li><a href="pages/numberbox.html">numberbox(数字输入框)</a></li>
+          </ul>
+        </li>
+        <li>
+          <h3>浮动按钮</h3>
+          <ul>
+            <li><a href="pages/floatbutton.html">floatbutton(浮动按钮)</a></li>
           </ul>
         </li>
       </ul>
@@ -188,82 +162,44 @@
   </div>
   <div class="col-4">
     <div id="events">
-      <h2>事件</h2>
+      <h2>其他</h2>
       <ul>
         <li>
-          <h3>页面载入</h3>
+          <h3><span class="CR">作用域</span></h3>
           <ul>
-            <li><a href="pages/ready.html">ready(fn)</a></li>
+            <li><a href="pages/scope.html">作用域</a></li>
           </ul>
         </li>
         <li>
-          <h3>事件处理</h3>
+          <h3>设置语言</h3>
           <ul>
-            <li><a href="pages/on.html">on(eve,[sel],fn)</a></li>
-            <li><a href="pages/off.html">off(eve,[sel],[fn])</a></li>
-            <li><a href="pages/bind.html">bind(type,[data],fn)</a></li>
-            <li><a href="pages/unbind.html">unbind(t,[d|f])</a></li>
-            <li><a href="pages/once.html">once(type,[sel],fn)</a></li>
-            <li><a href="pages/trigger.html">trigger(type,[data])</a></li>
-            <li><a href="pages/triggerHandler.html">triggerHandler(type, [data])</a></li>
+            <li><a href="pages/language.html">设置语言</a></li>
           </ul>
         </li>
         <li>
-          <h3>css3 特殊事件</h3>
+          <h3>层边界</h3>
           <ul>
-            <li><a href="pages/transitionEnd.html">transitionEnd(fn)</a></li>
-            <li><a href="pages/animationEnd.html">animationEnd(fn)</a></li>
-            <li><a href="pages/requestAnimationFrame.html">requestAnimationFrame(fn)</a></li>
-            <li><a href="pages/cancelAnimationFrame.html">cancelAnimationFrame(fn)</a></li>
+            <li><a href="pages/layerBorder.html">层边界</a></li>
           </ul>
         </li>
         <li>
-          <h3>事件</h3>
+          <h3>函数节流</h3>
           <ul>
-            <li><a href="pages/event.html">Event</a></li>
-            <!--li><a href="pages/blur.html">blur([[data],fn])</a></li>
-            <li><a href="pages/change.html">change([[data],fn])</a></li>
-            <li><a href="pages/click.html">click([[data],fn])</a></li>
-            <li><a href="pages/dblclick.html">dblclick([[data],fn])</a></li>
-            <li><a href="pages/focus.html">focus([[data],fn])</a></li>
-            <li><a href="pages/focusin.html">focusin([data],fn)</a></li>
-            <li><a href="pages/focusout.html">focusout([data],fn)</a></li>
-            <li><a href="pages/keydown.html">keydown([[data],fn])</a></li>
-            <li><a href="pages/keypress.html">keypress([[data],fn])</a></li>
-            <li><a href="pages/keyup.html">keyup([[data],fn])</a></li>
-            <li><a href="pages/mousedown.html">mousedown([[data],fn])</a></li>
-            <li><a href="pages/mouseenter.html">mouseenter([[data],fn])</a></li>
-            <li><a href="pages/mouseleave.html">mouseleave([[data],fn])</a></li>
-            <li><a href="pages/mousemove.html">mousemove([[data],fn])</a></li>
-            <li><a href="pages/mouseout.html">mouseout([[data],fn])</a></li>
-            <li><a href="pages/mouseover.html">mouseover([[data],fn])</a></li>
-            <li><a href="pages/mouseup.html">mouseup([[data],fn])</a></li>
-            <li><a href="pages/resize.html">resize([[data],fn])</a></li>
-            <li><a href="pages/scroll.html">scroll([[data],fn])</a></li>
-            <li><a href="pages/submit.html">submit([[data],fn])</a></li>
-            <li><a href="pages/unload.html">unload([[data],fn])</a></li-->
+            <li><a href="pages/throttle.html">函数节流 </a></li>
           </ul>
         </li>
         <li>
-          <h3>tap 事件</h3>
+          <h3>html转义</h3>
           <ul>
-            <li><a href="pages/tap.html">tap(fn)</a></li>
-            <li><a href="pages/singleTap.html">singleTap(fn)</a></li>
-            <li><a href="pages/longTap.html">longTap(fn)</a></li>
-            <li><a href="pages/doubleTap.html">doubleTap(fn)</a></li>
+            <li><a href="pages/escape.html">html转义</a></li>
           </ul>
         </li>
         <li>
-          <h3>swipe 事件</h3>
+          <h3>html转义</h3>
           <ul>
-            <li><a href="pages/swipe.html">swipe(fn)</a></li>
-            <li><a href="pages/swipeLeft.html">swipeLeft(fn)</a></li>
-            <li><a href="pages/swipeRight.html">swipeRight(fn)</a></li>
-            <li><a href="pages/swipeUp.html">swipeUp(fn)</a></li>
-            <li><a href="pages/swipeDown.html">swipeDown(fn)</a></li>
+            <li><a href="pages/range.html">指定范围取随机数</a></li>
           </ul>
         </li>
-      </ul>
     </div>
   </div>
 </div>
