--- a/pages/picker/picker.html
+++ b/pages/picker/picker.html
@@ -78,7 +78,7 @@
 				</ul>
 			</div>
 		</div>
-		<div id="ks-picker-da te-container"></div>
+		<div id="ks-picker-date-container"></div>
 	</div>
 <div class="PickerModal PickerModalDemo">
       <div class="ToolBar">
