--- a/pages/header/header.html
+++ b/pages/header/header.html
@@ -1,6 +1,6 @@
 ﻿<!--<div class="WAll">
 	<div class="HeaNav RippleBox">
-		<span class="HeaNavL InkRipple" onclick="javascript:history.back(-1);">
+		<span class="HeaNavL InkRipple" onclick="javascript:history.back();">
 			<i class="Icon IconBack"></i>
 		</span>
 		<span class="HeaNavC">{{HeaderTitle}}</span>
@@ -10,7 +10,7 @@
 <div class="WAll">
 	<div class="NavBar RippleBox">
 		<div class="NavBarInner">
-			<span class="Left InkRipple" onclick="javascript:history.back(-1);">
+			<span class="Left InkRipple" onclick="javascript:history.back();">
 				<i class="Icon IconBack"></i>
 			</span>
 			<span class="Center">{{HeaderTitle}}</span>
